2016-10-19  Uwe Schulzweida

	* conv_cmor_table: added support for CMOR CMIP6 tables

2016-10-05  Uwe Schulzweida

	* ml2pl: interpolation failed for data on hybrid half levels [Bug #7225]

2016-10-04  Uwe Schulzweida

	* using CDI library version 1.8.0rc3
	* Version 1.8.0rc3 release

2016-09-24  Uwe Schulzweida

	* remapnn: optimize sort in kdtree (speedup ~20%)

2016-09-19  Uwe Schulzweida

	* New operator shiftx/shifty - Shift fields on rectangular grid in x/y direction

2016-08-29  Uwe Schulzweida

	* CDO option -v includes -W

2016-08-18  Uwe Schulzweida

	* using CDI library version 1.8.0rc2
	* Version 1.8.0rc2 released

2016-08-16  Uwe Schulzweida

	* setzaxis: added support for internal zaxis name height_<value>_<units>

2016-08-11  Uwe Schulzweida

	* Changed handling of rotated lon/lat grids

2016-08-10  Uwe Schulzweida

	* Changed default of option -f nc to netCDF2

2016-07-29  Uwe Schulzweida

	* New operator selindex - Select grid indices

2016-07-18  Uwe Schulzweida

	* setgrid: added parameter regularnn

2016-07-15  Uwe Schulzweida

	* masklonlatbox: added support for unstructured grids

2016-07-02  Uwe Schulzweida

	* pstreamOpenAppend: added call to set_comp() (bug fix)

2016-06-28  Uwe Schulzweida

	* using CDI library version 1.7.2
	* Version 1.7.2 released

2016-06-28  Uwe Schulzweida

	* replace option -Q by --sort
	* delete, delcode, delname: wrong variable check (bug fix)

2016-06-27  Uwe Schulzweida

	* round doesn't work as expected, replaced by lround()
	* nint, expr(nint()): replace round by lround() (bug fix)

2016-06-21  Uwe Schulzweida

	* Renamed operator setpartab to setcodetab
	* Renamed operator pardes to codetab

2016-06-13  Uwe Schulzweida

	* mul: wrong result for missval*0 (bug fix)
	* expr: nmiss lost for time constant fields (bug fix)

2016-06-07  Uwe Schulzweida

	* select: file structure may change with time constant variables (bug fix)
	* select: wrong result with time constant 3D variables (bug fix)
